[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/bgfruitninja.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/inputproc.gd" type="Script" id=3]
[ext_resource path="res://assets/hud_vidas.png" type="Texture" id=4]
[ext_resource path="res://assets/font150.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/bomb100.png" type="Texture" id=6]

[sub_resource type="GDScript" id=1]

resource/name = "gameover"
script/source = "extends Control

var pode = false

func _ready():
	set_process_input(true)

func _input(event):
	if event.type == InputEvent.SCREEN_TOUCH and pode:
		get_tree().reload_current_scene()
	
func start():
	show()
	get_node(\"AnimationPlayer\").play(\"GameOver\")
	get_node(\"Timer\").start()


func _on_Timer_timeout():
	pode = true
	get_node(\"Label1\").show()"

[sub_resource type="Animation" id=2]

resource/name = "GameOver"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label1:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/scale = Vector2( 0.8, 0.6 )
texture = ExtResource( 2 )
centered = false

[node name="Fruits" type="Node2D" parent="."]

[node name="Generator" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="InputProc" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 3 )

[node name="Inter" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Limit" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="TextureFrame" type="TextureFrame" parent="Control"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 9.0
margin/right = 308.0
margin/bottom = 325.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Label" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 233.0
margin/top = 40.0
margin/right = 312.0
margin/bottom = 170.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.00570679, 0.730469, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/line_spacing = 0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bomb1" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1154.0
margin/top = 20.0
margin/right = 1254.0
margin/bottom = 120.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Bomb2" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1041.0
margin/top = 19.0
margin/right = 1141.0
margin/bottom = 119.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Bomb3" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 929.0
margin/top = 16.0
margin/right = 1029.0
margin/bottom = 116.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="GameOverScreen" type="Control" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = SubResource( 1 )

[node name="Label" type="Label" parent="GameOverScreen"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 270.0
margin/top = 273.0
margin/right = 996.0
margin/bottom = 403.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.00392157, 0.729412, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
text = "GAME OVER"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="GameOverScreen"]

visibility/visible = false
visibility/opacity = 0.0
rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 337.0
margin/top = 498.0
margin/right = 2437.0
margin/bottom = 628.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.00392157, 0.729412, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
text = "Toque para jogar novamente!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOverScreen"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/GameOver = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="GameOverScreen"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="timeout" from="Generator" to="." method="_on_Generator_timeout"]

[connection signal="timeout" from="InputProc/Inter" to="InputProc" method="_on_Inter_timeout"]

[connection signal="timeout" from="InputProc/Limit" to="InputProc" method="_on_Limit_timeout"]

[connection signal="timeout" from="GameOverScreen/Timer" to="GameOverScreen" method="_on_Timer_timeout"]


